# ghostnotes

./: .gitignore  LICENSE  README.md  config.py  hook.py  main.py  pyproject.toml  test.py
ghostnotes/: cli.py  config.py  hook.py  sync.py
tests/: test_config.py  test_hook.py  test_sync.py
