[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostnotes"
version = "0.2.0"
description = "Strip personal annotations from code before committing"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Tuna Akin", email = "tuna.takin@gmail.com"}
]
readme = "README.md"

[project.scripts]
ghostnotes = "ghostnotes.cli:main"
